<resources>
    <string name="app_name">SmartHome</string>
    <string name="label_username">Nazwa użytkownika</string>
    <string name="label_password">Hasło</string>
    <string name="title_login">Logowanie</string>
    <string name="button_login">Zaloguj</string>
    <string name="label_home_screen">Ekran główny</string>
    <string name="nav_drawer_open">Otwórz menu</string>
    <string name="nav_drawer_close">Zamknij menu</string>
    <string name="label_rooms">Pokoje</string>
    <string name="label_settings">Ustawienia</string>
    <string name="label_devices">Urządzenia</string>
    <string name="label_logout">Wyloguj</string>
    <string name="key_user_data">com.smarthome.android_app.USER_DATA</string>
    <string name="key_token">com.smarthome.android_app.TOKEN</string>
    <string name="url_server">http://73.ip-51-38-131.eu:8000/</string>
    <string name="msg_logged_out">Wylogowano</string>
    <string name="msg_logged_in">Zalogowano</string>
    <string name="msg_login_error">Niepoprawne dane logowania</string>
    <string name="label_intensity">Intensywność</string>
    <string name="label_room">Pomieszczenie:</string>
    <string name="label_volume">Głośność</string>
    <string name="label_temperature">Temperatura:</string>
    <string name="label_humidity">Wilgotność:</string>
    <string name="label_motion">Ruch w pomieszczeniu:</string>
    <string name="label_yes">tak</string>
    <string name="label_no">nie</string>
    <string name="msg_request_error">Nie można wykonać zapytania</string>
    <string name="pref_name">Nazwa urządzenia</string>
    <string name="pref_favourite">Wyświetl na ekranie głównym</string>
    <string name="pref_dimmable">Ściemnialna</string>
    <string name="pref_room">Pomieszczenie</string>
    <string name="prefs_general">Ogólne</string>
    <string name="prefs_lamp">Lampa</string>
    <string name="prefs_door">Drzwi</string>
    <string name="prefs_rtv">RTV</string>
    <string name="pref_device_id">ID fizycznego urządzenia</string>
    <string name="pref_room1">Pomieszczenie 1</string>
    <string name="pref_room2">Pomieszczenie 2</string>
    <string name="prefs_room">Pokój</string>
    <string name="pref_room_name">Nazwa pomieszczenia</string>
    <string name="button_save">Zapisz</string>
    <string name="button_cancel">Anuluj</string>
    <string name="title_lamp_settings">Ustawienia lampy</string>
    <string name="title_rtv_settings">Ustawienia urządzenia RTV</string>
    <string name="title_door_settings">Ustawienia drzwi</string>
    <string name="title_room_settings">Ustawienia pokoju</string>
    <string name="msg_saved">Ustawienia zostały zapisane</string>
    <string name="msg_invalid_data">Błędne dane</string>
</resources>
