<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/prefs_general">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_door_favourite"
            android:title="@string/pref_favourite" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_door">
        <!--not implemented on server yet-->
        <!--<ListPreference android:key="pref_rtv_device_id"-->
            <!--android:title="@string/pref_device_id"-->
            <!--android:defaultValue="0" />-->
        <ListPreference android:key="pref_door_room1"
            android:title="@string/pref_room1"
            android:defaultValue="0" />
        <ListPreference android:key="pref_door_room2"
            android:title="@string/pref_room2"
            android:defaultValue="0" />
    </PreferenceCategory>
</PreferenceScreen>