<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/prefs_general">
        <EditTextPreference
            android:key="pref_room_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_room_name" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_room_favourite"
            android:title="@string/pref_favourite" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_room">
        <!--not implemented on server yet-->
        <!--<ListPreference android:key="pref_room_device_id"-->
            <!--android:title="@string/pref_device_id"-->
            <!--android:defaultValue="0" />-->
    </PreferenceCategory>
</PreferenceScreen>